# eyeviation

./: .gitignore  CLAUDE.md  README.md  analysis.ipynb  analysis_report.html  features.csv  make_notebook.py  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml
docs/: analysis.ipynb  code-reference.md  data-and-pipeline.md  index.md
shooter/: build_features.py  dashboard.py  features.py  parse.py  reporting.py
