[project]
name = "shooter"
version = "0.1.0"
description = "Shooter performance feature engineering from VR shooting simulation logs"
requires-python = ">=3.11"
dependencies = [
    "pandas",
    "numpy",
    "matplotlib",
    "jupyter",
    "nbconvert",
    "nbformat",
    "seaborn>=0.13.2",
    "statsmodels",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.6",
    "mkdocstrings[python]>=1.0.4",
    "mkdocs-jupyter>=0.26.3",
]
